Solve layout bugs
Solve layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@ nav {
 
 .select-box {
   font-family: "Inter", sans-serif;
-  max-width: 400px;
+  padding: 0 0.5em;
+  max-width: 300px;
   font-size: 1rem;
   flex: 1;
   margin: 0 12px;
@@ -28,6 +29,11 @@ nav {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 6px;
   color: #111827;
+  appearance: none;
+  background-image: url("./assets/Icon.png");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 1em;
 }
 
 button {
@@ -63,9 +69,10 @@ button {
   display: inline-block;
 }
 
-.tooltip .tooltiptext {
+.tooltip .tooltip-text {
   visibility: visible;
-  padding: 1em;
+  padding: 1em 0;
+  width: 60%;
   background-color: #555;
   color: #fff;
   text-align: center;
@@ -74,7 +81,7 @@ button {
   position: absolute;
   z-index: 1;
   bottom: 0%;
-  left: 30%;
+  left: 20%;
   margin-left: 0;
   opacity: 0;
   cursor: pointer;
@@ -83,7 +90,7 @@ button {
   animation-iteration-count: infinite;
 }
 
-.tooltip .tooltiptext::after {
+.tooltip .tooltip-text::after {
   content: "";
   position: absolute;
   margin-left: -5px;
@@ -92,11 +99,12 @@ button {
   border-color: #555 transparent transparent transparent;
 }
 
-.tooltip:hover .tooltiptext {
+.tooltip:hover .tooltip-text {
   visibility: visible;
   opacity: 0.3;
 }
 
+/* makes the copy clipboard tooltip shake */
 @keyframes shake {
   0% {
     transform: translate(1px, 1px) rotate(0deg);
